--- a/HW1123/HW1123Q02.md
+++ b/HW1123/HW1123Q02.md
@@ -14,7 +14,7 @@ $\{H_0} : \mu = \mu_0$
 $\{H_\alpha} : \mu > \mu_0$  
 Assume $\alpha$ = 0.1 or 0.05 or 0.01
 
-P-value = P( z > 1.15) = 1 -P( z < 1.15)  
+p-value = P( z > 1.15) = 1 -P( z < 1.15)  
 Accroding to the table 3 in Appendix from textbook. P( z < 1.15) = 0.8749  
 1 - 0.8749 = 0.1251  
 
@@ -34,7 +34,7 @@ $\{H_0} : \mu = \mu_0$
 $\{H_\alpha} : \mu \ne \mu_0$  
 Assume $\alpha$ = 0.05 or 0.1 or 0.01
 
-P-value = 2 $\times$ P( z < -2.78 )    
+p-value = 2 $\times$ P( z < -2.78 )    
 Accroding to the table 3 in Appendix from textbook. P( z < -2.78 ) = 0.0027  
 0.0027 $\times$ 2 = 0.0054
 
@@ -55,7 +55,7 @@ $\{H_0} : \mu = \mu_0$
 $\{H_\alpha} : \mu < \mu_0$  
 Assume $\alpha$ = 0.05 or 0.1 or 0.01
 
-P-value = P( z < -1.81 )    
+p-value = P( z < -1.81 )    
 Accroding to the table 3 in Appendix from textbook. P( z < -1.81 ) = 0.0351
 
 If p-value is smaller than $\alpha$, reject $\{H_0}$. Otherwise, do not reject $\{H_0}$
