--- a/HW1123/HW1123Q10.md
+++ b/HW1123/HW1123Q10.md
@@ -19,15 +19,15 @@ a.
 b.
 
 (1) 
- $H_0$ : P = 75%
-    $H_a$ : P $\ne$ 75%
+ $H_0$ : p = 75%
+    $H_a$ : p $\ne$ 75%
 
 (2) 
 $$\alpha $$ = 0.01
 
 (3) 
 
-Ｐ ＝ 58/100 = 0.58
+/hat{p} ＝ 58/100 = 0.58
 
 Z = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.58-0.75}{\sqrt{\frac{0.75*0.25}{100}}} $$ = -3.9260
 
