--- a/HW1123/06_陳嘉祥/CH09.04_Q01-03.md
+++ b/HW1123/06_陳嘉祥/CH09.04_Q01-03.md
@@ -8,11 +8,11 @@ Title: HW1123_06_Titan(陳嘉祥)
 
 ### 1：隨機抽取的樣本大小 n=1000，樣本中的成功次數為 279 次，我們希望檢驗比例 p 是否小於 0.3 
 
-$$H_0$$ : P $$\ge $$ 0.3 
+$$H_0$$ : p $$\ge $$ 0.3 
 
-$$H_a$$ : P < 0.3 (左尾檢定) 
+$$H_a$$ : p < 0.3 (左尾檢定) 
 
-已知條件 : n=1000, $$\hat{P} =297/1000 $$=0.297, n*p=300 且 n*(1-p)=700 $$\ge $$ 5，故可採用Z分配進行檢定。  
+已知條件 : n=1000, $$\hat{p} =297/1000 $$=0.297, n*p=300 且 n*(1-p)=700 $$\ge $$ 5，故可採用Z分配進行檢定。  
 
 左尾檢定，故 $$\alpha $$ = 0.05 ，查表得到Z=-1.645 
 
@@ -24,9 +24,9 @@ Z = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.279 - 0.3}{\
 
 ### 2：隨機抽取的樣本大小 n=1400，樣本中的成功次數為 529 次，我們希望檢驗比例 p 是否不等於 0.4
 
-$$H_0$$ : P = 0.4
+$$H_0$$ : p = 0.4
 
-$$H_a$$ : P $$\ne $$ 0.4 (雙尾檢定)
+$$H_a$$ : p $$\ne $$ 0.4 (雙尾檢定)
 
 已知條件 : n=1400, $$\hat{P} =529/1400 $$=0.3779, n*p=560 且 n*(1-p)=840 $$\ge $$ 5 ，故可採用Z分配進行檢定。  
 
@@ -40,9 +40,9 @@ Z-test :
 
 ### 3：隨機抽取的樣本大小 n=120，樣本中的成功次數為 72 次，我們希望檢驗比例 p 是否大於 0.5  
  
-$$H_0$$ : P $$\le $$ 0.5 
+$$H_0$$ : p $$\le $$ 0.5 
  
-$$H_a$$ : P > 0.5 (右尾檢定)  
+$$H_a$$ : p > 0.5 (右尾檢定)  
  
 已知條件 : n=120, $$\hat{P} =72/120 $$=0.6, n*p=60 且 n*(1-p)=60 $$\ge $$ 5，故可採用Z分配進行檢定。   
  
