--- a/HW1123/06_陳嘉祥/CH09.04_Q04-06.md
+++ b/HW1123/06_陳嘉祥/CH09.04_Q04-06.md
@@ -8,9 +8,9 @@ Title: HW1123_06_Titan(陳嘉祥)
 
 ### 4：隨機抽取的樣本大小 n=1000，樣本中的成功次數為 279 次，我們希望檢驗比例 p 是否小於 0.3 
 
-$$H_0$$ : P $$\ge $$ 0.3 
+$$H_0$$ : p $$\ge $$ 0.3 
 
-$$H_a$$ : P < 0.3 (左尾檢定) 
+$$H_a$$ : p < 0.3 (左尾檢定) 
 
 已知條件 : n=1000, $$\hat{P} =297/1000 $$=0.297, n*p=300 且 n*(1-p)=700 $$\ge $$ 5，計算Z值，求出樣本統計量的左尾面積。  
 
@@ -24,9 +24,9 @@ P-Value = P( Z < -1.45 )，查表得到 : P( Z < -1.45 ) = 0.0735 > $$\alpha=0.0
 
 ### 5：n=1400，x=529，檢查樣本比例是否與 0.4 有顯著差異。
 
-$$H_0$$ : P = 0.4
+$$H_0$$ : p = 0.4
 
-$$H_a$$ : P $$\ne $$ 0.4 (雙尾檢定)
+$$H_a$$ : p $$\ne $$ 0.4 (雙尾檢定)
 
 已知條件 : n=1400, $$\hat{P} =529/1400 $$=0.3779, n*p=560 且 n*(1-p)=840 $$\ge $$ 5 ，計算Z值，求出樣本統計量的雙尾面積。  
 
@@ -40,9 +40,9 @@ P-Value = 2*P( Z > 1.69 )，查表得到 : P( Z > 1.69 ) = 0.0455，故 2*P( Z >
 
 ### 6：n=120，x=72，檢查樣本比例是否大於 0.5。
 
-$$H_0$$ : P $$\le $$ 0.5 
+$$H_0$$ : p $$\le $$ 0.5 
  
-$$H_a$$ : P > 0.5 (右尾檢定)  
+$$H_a$$ : p > 0.5 (右尾檢定)  
  
 已知條件 : n=120, $$\hat{P} =72/120 $$=0.6, n*p=60 且 n*(1-p)=60 $$\ge $$ 5，計算Z值，求出樣本統計量的右尾面積。  
 
