--- a/HW1123/06_陳嘉祥/CH09.04_Q08.md
+++ b/HW1123/06_陳嘉祥/CH09.04_Q08.md
@@ -8,9 +8,9 @@ Title: HW1123_06_Titan(陳嘉祥)
  
 ### a. 使用 α = 0.05 的假設檢定，來確定是否超過50%的美國人不會乘坐無人駕駛車。 
 
-$$H_0$$ : P $$\le $$ 0.5  
+$$H_0$$ : p $$\le $$ 0.5  
  
-$$H_a$$ : P > 0.5 (右尾檢定)   
+$$H_a$$ : p > 0.5 (右尾檢定)   
 
 已知條件 : n=500, $$\hat{P} =0.56 $$, n*p=250 且 n*(1-p)=250 $$\ge $$ 5，故可採用Z分配進行檢定。    
  
@@ -25,9 +25,9 @@ Z = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.56 - 0.5}{\s
 
 ### b. 使用 p-value 的方法，這兩種方法能得出相同的結果嗎?      
  
-$$H_0$$ : P $$\le $$ 0.5  
+$$H_0$$ : p $$\le $$ 0.5  
  
-$$H_a$$ : P > 0.5 (右尾檢定)   
+$$H_a$$ : p > 0.5 (右尾檢定)   
  
 已知條件 : n=500, $$\hat{P} =0.56 $$, n*p=250 且 n*(1-p)=250 $$\ge $$ 5，由小題a.得知Z值接近2.68。   
 
