--- a/HW1123/06_陳嘉祥/CH09.04_Q09.md
+++ b/HW1123/06_陳嘉祥/CH09.04_Q09.md
@@ -8,9 +8,9 @@ Title: HW1123_06_Titan(陳嘉祥)
 
 ### a. 如果我們希望檢驗新稅法是否幫助小型企業生存，如何表達H0​和Ha？
 
-$$H_0$$ : P $$\ge $$ 0.2 
+$$H_0$$ : p $$\ge $$ 0.2 
  
-$$H_a$$ : P < 0.2 (左尾檢定)  
+$$H_a$$ : p < 0.2 (左尾檢定)  
 
 
 ### b. 基於樣本失敗的小型企業比例，計算檢驗統計量 p^。
