--- a/HW1123/13_陳峻毅/CH09.04_Q11.md
+++ b/HW1123/13_陳峻毅/CH09.04_Q11.md
@@ -12,14 +12,14 @@
 ## a. 替代假設
 為檢驗篩查計畫是否有效，我們設定：
 - **替代假設 $H_1$**：\
-  $H_1$: p > 0.6667
+  $H_1: p_0 > 0.6667$
   （篩查計畫提高了患者存活率）
 
 ---
 
 ## b. 虛無假設
 - **虛無假設 $H_0$**：\
-  $H_0$: p = 0.6667
+  $H_0: p_0 = 0.6667$
   （篩查計畫沒有提高患者存活率）
 
 這是一個 **右尾檢定**。
@@ -46,10 +46,7 @@ $P(Z \geq 4.6) \approx 0.00000398$
 - 比較：
   $p = 0.00000398 < \alpha = 0.05$
 - **結論**：拒絕虛無假設 $H_0$。篩查計畫顯著提高了患者的存活率。
-
 ---
-
 ## 結果報告
-1. **統計結果**：檢定統計量 $z = 4.6$，p-value = 0.00000398，結果顯著。
-2. **實際解釋**：篩查計畫顯著提高了患者存活率，提供了有力證據支持該計畫的有效性。
-3. **實用結論**：根據數據分析，應推廣該篩查計畫，因為其有效提高了患者存活率。
+**統計結果**：檢定統計量 z = 4.6，p-value = 0.00000398下，提供了有力證據支持該計畫可能有效提高了患者存活率
+
