--- a/HW1123/10_蔡佳媛/CH09.04_Q11_10_Cathy.md
+++ b/HW1123/10_蔡佳媛/CH09.04_Q11_10_Cathy.md
@@ -1,2 +1,27 @@
 
 ![image](https://github.com/user-attachments/assets/a56aa696-8296-4fa5-aa2b-923a7463f8ee)
+
+$p$ = survival rate = 1 - $\frac{1}{3}$ = $\frac{2}{3}$  
+$n$ = 200  
+$x$ = the number of those in the sample who survive the disease  
+
+
+### a. If you wish to determine whether the screening program has been effective, state the alternative hypothesis that should be tested.
+
+$H_{a}$: $p \gt \frac{2}{3}$
+
+
+### b. State the null hypothesis.
+
+$H_{0}$: $p \leq \frac{2}{3}$
+
+
+### c. If 164 women in the sample of 200 survive the disease, can you conclude that the screening program was effective? Test using $\alpha$ = 0.05 and explain the pratical conclusions from your test.
+
+$z_{STAT} \approx \frac{\frac{164}{200}-\frac{2}{3}}{\sqrt{\frac{\frac{1}{3}\times\frac{2}{3}}{200}}}$ =   
+
+
+
+
+
+### d. Find the p-value for the test and interpret it.
