--- a/HW1123/HW1123Q11.md
+++ b/HW1123/HW1123Q11.md
@@ -63,7 +63,7 @@ $H_a$ : P > $\frac{2}{3}$
 
  因為 𝑧超過了臨界值，我們拒絕 $H_0$
 ​
-### 4.檢定結論：在significance level 顯著水準 因為 𝑧*=4.60 > $𝑧_𝛼$=1.645，拒絕 $H_0$，落在拒絕域內。所以我們認為檢測計畫有效！
+### 4.檢定結論：在significance level 顯著水準 $\alpha = 0.05$下，因為 𝑧*=4.60 > $𝑧_𝛼$=1.645，拒絕 $H_0$，落在拒絕域內。所以我們認為檢測計畫有效！
 
 ![image](https://github.com/user-attachments/assets/58127144-da30-47b5-b697-3dfebf25ae36)
 
