--- a/HW1123/08_蕭宇辰/CH09.04_Q8.md
+++ b/HW1123/08_蕭宇辰/CH09.04_Q8.md
@@ -14,7 +14,7 @@ a. $$H_0$$ : P = 0.5
 
    由The Slutsky's theorem: $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}}$$ -> Z
 
-   $Z_stat$ = $$\frac{0.56-0.50}{\sqrt{\frac{0.50*0.50}{500}}}$$ = 2.6833
+   $Z_{stat}$ = $$\frac{0.56-0.50}{\sqrt{\frac{0.50*0.50}{500}}}$$ = 2.6833
 
    由 $$\alpha$$ = 0.05 reject region = {Z>1.645} ，因落在拒絕域中，故拒絕虛無假設，有證據顯示 P > 0.5，即超過 50% 的美國人不會乘坐無人駕駛車
 
@@ -25,7 +25,7 @@ b. $$H_0$$ : P = 0.5
 
    由The Slutsky's theorem: $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}}$$ -> Z
 
-   $Z_stat$ = $$\frac{0.56-0.5}{\sqrt{\frac{0.50*0.50}{500}}}$$ = 2.6833
+   $Z_{stat}$ = $$\frac{0.56-0.5}{\sqrt{\frac{0.50*0.50}{500}}}$$ = 2.6833
 
    P-value = P(Z>2.6833) $$\approx$$  P(Z>2.68) = 1- 0.9963 = 0.0037
 
