--- a/HW1123/06_陳嘉祥/CH09.04_Q09.md
+++ b/HW1123/06_陳嘉祥/CH09.04_Q09.md
@@ -24,7 +24,7 @@ $$\hat{P} $$ = $$\frac{30}{200}$$ = 0.15
 
 Z = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.15 - 0.2}{\sqrt{\frac{0.2 * 0.8}{200}}} $$ 
 
-= -1.7677 $$cong -1.77 $$ < -1.645      
+= -1.7677  $$\cong -1.77 $$ < -1.645      
 
 因為Z檢定量落入Rejection Region，故拒絕 $$H_{0} $$ 。   
 
