--- a/HW1123/10_蔡佳媛/CH09.04_Q08_10_Cathy.md
+++ b/HW1123/10_蔡佳媛/CH09.04_Q08_10_Cathy.md
@@ -13,9 +13,9 @@ $\alpha$ = 0.05
 $H_{0}$: $p \leq$ 0.5  
 $H_{a}$: $p \gt$ 0.5  
 
-Test statistic: z $\approx \frac{\hat{p}-p_{0}}{\sqrt{\frac{p_{0}q_{0}}{n}}}$ = $\frac{0.56-0.5}{\sqrt{\frac{0.5 \times 0.5}{500}}}$ = -2.683282 $\approx$ -2.68
+Test statistic: z $\approx \frac{\hat{p}-p_{0}}{\sqrt{\frac{p_{0}q_{0}}{n}}}$ = $\frac{0.56-0.5}{\sqrt{\frac{0.5 \times 0.5}{500}}}$ = 2.683282 $\approx$ 2.68
 
-z = -2.68 is less than -1.645, reject $H_{0}$
+z = 2.68 is greater than 1.645, reject $H_{0}$
 
 ![image](https://github.com/user-attachments/assets/0d07b074-c6ed-4608-a2a6-7c748c72098c)
 
