--- a/HW1123/08_蕭宇辰/CH09.04_Q9.md
+++ b/HW1123/08_蕭宇辰/CH09.04_Q9.md
@@ -22,18 +22,18 @@ a. b. c.
 
    由The Slutsky's theorem: $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}}$$ -> Z
 
-   $Z_stat$ = $$\frac{0.15-0.2}{\sqrt{\frac{0.2*0.8}{200}}}$$ = -1.7678
+   $Z_{stat}$ = $$\frac{0.15-0.2}{\sqrt{\frac{0.2*0.8}{200}}}$$ = -1.7678
 
    由 $$\alpha$$ = 0.05 reject region = {Z<-1.645} ，因落在拒絕域中，故拒絕虛無假設，有證據顯示 P < 0.2，即新稅法幫助小型企業生存
 
 
-d. $$H_0$$ : P = 0.5
+d. $$H_0$$ : P = 0.2
    
-   $$H_a$$ : P > 0.5
+   $$H_a$$ : P > 0.2
 
    由The Slutsky's theorem: $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}}$$ -> Z
 
-   $Z_stat$ = $$\frac{0.15-0.2}{\sqrt{\frac{0.20*0.80}{200}}}$$ = -1.7678
+   $Z_{stat}$ = $$\frac{0.15-0.2}{\sqrt{\frac{0.20*0.80}{200}}}$$ = -1.7678
 
    P-value = P(Z<-1.7678) $$\approx$$  P(Z<-1.76) = 0.0392
 
