--- a/HW1123/HW1123Q11.md
+++ b/HW1123/HW1123Q11.md
@@ -87,13 +87,15 @@ p-value=1−P(Z≤4.60)
 
 步驟：
 
-1.查找 𝑍*=4.60的累積機率 𝑃(𝑍≤4.60)。
+### 1.查找 𝑍*=4.60的累積機率 𝑃(𝑍≤4.60)。
 
 P(Z≤4.60)≈0.999997
 
-2.計算右尾累積機率：
+### 2.計算右尾累積機率：
 
 p-value=1−0.999997=0.000003 < α=0.05 
+
+### 3.檢定結論：
 
 P 值 ≈0.000003 是一個極小的值，表明如果檢測計畫對存活率沒有影響( $H_0$成立)，觀察到樣本存活率 82% 或更高的機率幾乎為零。
 
