--- a/HW1123/06_陳嘉祥/CH09.04_Q09.md
+++ b/HW1123/06_陳嘉祥/CH09.04_Q09.md
@@ -26,7 +26,7 @@ Z = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.15 - 0.2}{\s
 
 = -1.7677  $$\cong -1.77 $$ < -1.645      
 
-因為Z檢定量落入Rejection Region，故拒絕 $$H_{0} $$ 。   
+因為Z檢定量落入Rejection Region，故拒絕 $$H_{0} $$ ，可能降低小企業失敗率。   
 
 ### d. 計算檢驗的 p-value。您在 c 部分的結論會改變嗎？
 
@@ -34,5 +34,5 @@ P-Value = P( Z < -1.77 )，查表得到 : P( Z < -1.77 ) = 0.0384 < $$\alpha=0.0
 
 因為P-Value < $$\alpha $$，故拒絕 $$H_{0} $$ 。   
 
-使用P-Value檢定，得出與Z檢定相同的結果，故不會改變c小題的結論。
+使用P-Value檢定，得出與Z檢定相同的結果，故不會改變c小題的結論，可能降低小企業失敗率。
 
