--- a/HW1123/HW1123Q11.md
+++ b/HW1123/HW1123Q11.md
@@ -99,7 +99,7 @@ p-value=1−0.999997=0.000003 < α=0.05
 
 P 值 ≈0.000003 是一個極小的值，表明如果檢測計畫對存活率沒有影響( $H_0$成立)，觀察到樣本存活率 82% 或更高的機率幾乎為零。
 
-因此，我們有非常強的證據拒絕 $H_0$，並認為檢測計畫有效，提高了存活率。
+因此，我們有顯著證據拒絕 $H_0$，並認為檢測計畫有效，提高了存活率。
 
 
 
