--- a/HW1123/13_陳峻毅/CH09.04_Q9.md
+++ b/HW1123/13_陳峻毅/CH09.04_Q9.md
@@ -24,10 +24,10 @@
 ## b. 檢定統計量計算
 
 檢定統計量公式：
-$z = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0 (1 - p_0)}{n}}}$
+$z* = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0 (1 - p_0)}{n}}}$
 
 代入數據：
-$z = \frac{0.15 - 0.20}{\sqrt{\frac{0.20 \cdot (1 - 0.20)}{200}}} = \frac{-0.05}{\sqrt{\frac{0.20 \cdot 0.80}{200}}} = \frac{-0.05}{\sqrt{0.0008}} = \frac{-0.05}{0.02828} \approx -1.77$
+$z* = \frac{0.15 - 0.20}{\sqrt{\frac{0.20 \cdot (1 - 0.20)}{200}}} = \frac{-0.05}{\sqrt{\frac{0.20 \cdot 0.80}{200}}} = \frac{-0.05}{\sqrt{0.0008}} = \frac{-0.05}{0.02828} \approx -1.77$
 
 ---
 ## c. 拒絕域與結論
@@ -37,7 +37,7 @@ $z = \frac{0.15 - 0.20}{\sqrt{\frac{0.20 \cdot (1 - 0.20)}{200}}} = \frac{-0.05}
 $z_\alpha = -1.645$
 
 ### 比較檢定統計量與拒絕域
-$z = -1.77 < z_\alpha = -1.645$
+$z* = -1.77 < z_\alpha = -1.645$
 
 因此，檢定統計量落在拒絕域內。
 ### 結論
