--- a/HW1123/HW1123Q08.md
+++ b/HW1123/HW1123Q08.md
@@ -37,7 +37,7 @@
 >
 >𝑍 = 2.6832 > 1.645: Reject $$H_0$$
 >
->*There is sufficient evidence to conclude that more than 50% of Americans would not ride in a driverless car.*
+>*There is siganificans evidence to conclude that more than 50% of Americans would not ride in a driverless car.*
 
 ***b. Use the p-value approach. Do the two approaches lead to the same conclusion?***
     
@@ -51,5 +51,5 @@
 >
 >**3.Conclusion:**
 >
->*The 𝑝-value approach leads to the same conclusion: there is sufficient evidence to suggest that more than 50% of Americans would not ride in a driverless car.*
+>*The 𝑝-value approach leads to the same conclusion: there is siganificans evidence to suggest that more than 50% of Americans would not ride in a driverless car.*
 >
