--- a/HW1123/06_陳嘉祥/CH09.04_Q10.md
+++ b/HW1123/06_陳嘉祥/CH09.04_Q10.md
@@ -8,7 +8,7 @@ Title: HW1123_06_Titan(陳嘉祥)
 
 遺傳學家聲稱這次交配的後代中，有75%的後代會擁有紅色花瓣。  
 
-為了檢驗這一說法，收集了100顆種子，並發現其中有58株植物擁有紅色花瓣。  
+為了檢驗這一說法，收集了100顆種子，交配後並發芽，並發現其中有58株植物擁有紅色花瓣。  
 
 ### a. 針對遺傳學家的說法，應提出什麼假設來進行檢驗?
 
