--- a/HW1123/HW1123Q10.md
+++ b/HW1123/HW1123Q10.md
@@ -27,7 +27,7 @@ $$\alpha $$ = 0.01
 
 (3) 
 
-p ＝ 58/100 = 0.58
+$\hat{p} ＝ 58/100 = 0.58$
 
 Z = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.58-0.75}{\sqrt{\frac{0.75*0.25}{100}}} $$ = -3.9260
 
