--- a/HW1123/HW1123Q08.md
+++ b/HW1123/HW1123Q08.md
@@ -37,7 +37,7 @@
 >
 >𝑍 = 2.6832 > 1.645: Reject $$H_0$$
 >
->*there is siganificans evidence to conclude that more than 50% of Americans would not ride in a driverless car.*
+>*There is siganificans evidence to conclude that more than 50% of Americans would not ride in a driverless car.*
 
 ***b. Use the p-value approach. Do the two approaches lead to the same conclusion?***
     
