--- a/HW1123/06_陳嘉祥/CH09.04_Q10.md
+++ b/HW1123/06_陳嘉祥/CH09.04_Q10.md
@@ -28,5 +28,5 @@ $$H_a$$ : P $$\ne $$ 0.75 (雙尾檢定)
 
 P-Value = 2*P( Z > 3.93 )，查表得到 : P( Z > 3.93 ) = 0，故 2*P( Z > 3.93 ) = 0 < $$\alpha =0.01 $$。
 
-使用Z檢定與P-Value檢定，得到相同的結果，故拒絕 $$H_{0} $$ 。   
+使用Z檢定與P-Value檢定，得到相同的結果，故拒絕 $$H_{0} $$ ，因此有充份的證據推翻出現紅色花瓣的比例等於75%。   
 
