--- a/HW1123/HW1123Q13.md
+++ b/HW1123/HW1123Q13.md
@@ -60,7 +60,7 @@ $t_{0.025} \leq t \leq t_{0.025}$ = $-2.064 \leq t \leq 2.064 $
 
 ## Step 5 計算檢定統計量
 
-t = $\frac{(69.7-74)}{16/ \sqrt{25}}$ = -1.3438
+$t^{*}$ = $\frac{(69.7-74)}{16/ \sqrt{25}}$ = -1.3438
 
 ## Step 6 結論
 
