--- a/HW1123/HW1123Q11.md
+++ b/HW1123/HW1123Q11.md
@@ -96,7 +96,7 @@ p-value=1−0.999997=0.000003 < α=0.05
 ### 3.檢定結論：
 
 P 值 ≈0.000003 是一個極小的值，表明如果檢測計畫對存活率沒有影響，觀察到樣本存活率 82% 或更高的機率幾乎為零。
-因此在significance level 顯著水準 $\alpha = 0.05$下, 拒絕 $H_0$，檢測計畫有效，提高了存活率。
+因此在significance level 顯著水準 $\alpha = 0.05$下, 拒絕 $H_0$，所以我們認為檢測計畫有效，提高了存活率。
 
 
 
