--- a/HW1123/13_陳峻毅/CH09.04_Q10.md
+++ b/HW1123/13_陳峻毅/CH09.04_Q10.md
@@ -3,7 +3,7 @@
 - 總數：n = 100
 - 紅色花瓣植物數量：x = 58
 - 樣本比例： $\hat{p}\$ = $\frac{x}{n}$ = $\frac{58}{100}\$ = 0.58
-- 基因學家聲稱的比例：p_0 = 0.75
+- 基因學家聲稱的比例： $p_0 = 0.75$
 - 顯著水準： $\alpha$ = 0.01 
 
 ---
@@ -50,6 +50,7 @@ $p = 2 \times 0.000045 = 0.00009$
   $p = 0.00009 < \alpha = 0.01$
 
 因此，我們拒絕 $H_0$。這意味著數據提供了強有力的證據，表明實際比例與基因學家聲稱的 75% 不符。
+      H1 is right, there is sufficient evidence to conclude that ........
 
 ---
 ## 結果報告
