--- a/HW1123/13_陳峻毅/CH09.04_Q10.md
+++ b/HW1123/13_陳峻毅/CH09.04_Q10.md
@@ -49,7 +49,7 @@ $p = 2 \times 0.000045 = 0.00009$
 - 比較p-value 與 $\alpha \$：
   $p = 0.00009 < \alpha = 0.01$
 
-因此，我們拒絕 $H_0$。這意味著數據提供了強有力的證據，表明實際比例與基因學家聲稱的 75% 不符。
+因此，我們拒絕 $H_0$。這意味著數據提供了強有力的證據，表明實際比例與基因學家聲稱的 75% 不符。\
       H1 is right, there is sufficient evidence to conclude that ........
 
 ---
