--- a/HW1123/02_顏子軒/CH09.04_Q08.md
+++ b/HW1123/02_顏子軒/CH09.04_Q08.md
@@ -25,7 +25,7 @@
 >
 >**3.Test Statistic($Z$-test for proportions):**
 > 
->𝑍 = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.56 - 0.5}{\sqrt{\frac{0.5 * 0.5}{500}}} $$ $\approx$ 2.6832     
+>𝑍* = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.56 - 0.5}{\sqrt{\frac{0.5 * 0.5}{500}}} $$ $\approx$ 2.6832     
 >
 >**4. Critical Value**
 >
