--- a/HW1123/10_蔡佳媛/CH09.04_Q11_10_Cathy.md
+++ b/HW1123/10_蔡佳媛/CH09.04_Q11_10_Cathy.md
@@ -18,10 +18,15 @@ $H_{0}$: $p \leq \frac{2}{3}$
 
 ### c. If 164 women in the sample of 200 survive the disease, can you conclude that the screening program was effective? Test using $\alpha$ = 0.05 and explain the pratical conclusions from your test.
 
-$z_{STAT} \approx \frac{\frac{164}{200}-\frac{2}{3}}{\sqrt{\frac{\frac{1}{3}\times\frac{2}{3}}{200}}}$ =   
+$z_{STAT} \approx \frac{\frac{164}{200}-\frac{2}{3}}{\sqrt{\frac{\frac{1}{3}\times\frac{2}{3}}{200}}} \approx$ 4.6    
+
+z $gt$ 1.645 falls into rejection region and $H_{0}$ is rejected  
+
+![image](https://github.com/user-attachments/assets/c64d8b8a-ec07-4aa7-aae2-063baeaaa9fb)
 
 
+### d. Find the p-value for the test and interpret it.  
+
+P( z $\gt$ 4.6) $\approx$ 0 $\lt \alpha$, $H_{0}$ is rejected  
 
 
-
-### d. Find the p-value for the test and interpret it.
