--- a/HW1123/14_陳偉豪/CH09.04_Q09.md
+++ b/HW1123/14_陳偉豪/CH09.04_Q09.md
@@ -1,1 +1,37 @@
 ![image](https://github.com/user-attachments/assets/ff06359c-ecf4-4e7c-a023-0425cb02e0f3)  
+
+
+### a.  
+$H_0: p = 0.2$。  
+$H_a: p < 0.2$
+
+### b.  
+
+$\hat{p} = \frac{30}{200} = 0.15 $  
+
+$z_{\text{stat}} \approx \frac{\hat{p} - p_0}{\sqrt{\frac{p_0 (1 - p_0)}{n}}}$
+
+$z^* = \frac{0.15 - 0.2}{\sqrt{\frac{0.2(1 - 0.2)}{200}}} \approx -1.77$  
+
+
+### c.  
+
+Set $\alpha = 0.05$  
+
+$Z_{\alpha} = Z_{0.05} = -1.645 $
+
+拒絕域 $Z<-1.645$
+
+$z^* = -1.77< -1.645$  
+
+$z^*$落在拒絕域區間
+
+故拒絕 $H_0$，有足夠證據支持 $H_a:p < 0.2$
+
+### d.  
+
+$p-value = P(z < -1.77) = 0.0384 < 0.05 $  
+
+$p-value<\alpha$  
+
+故拒絕 $H_0$，有足夠證據支持 $H_a:p < 0.2$
