--- a/HW1123/06_陳嘉祥/CH09.04_Q11.md
+++ b/HW1123/06_陳嘉祥/CH09.04_Q11.md
@@ -41,5 +41,5 @@ P-Value = P( Z > 4.6 )，查表得到 : P( Z > 4.6 ) = 0 < $$\alpha=0.05 $$。
 
 因為P-Value < $$\alpha $$，故拒絕 $$H_{0} $$ 。   
 
-解釋: 因為P-Value 小於0.05，故有足夠/充份的證據顯示早共檢測的女性存活率大於2/3。
+解釋: 因為P-Value 小於0.05，故有足夠/充份的證據顯示早期檢測的女性存活率大於2/3。
 
