--- a/HW1123/10_蔡佳媛/CH09.04_Q11_10_Cathy.md
+++ b/HW1123/10_蔡佳媛/CH09.04_Q11_10_Cathy.md
@@ -27,6 +27,6 @@ z $gt$ 1.645 falls into rejection region and $H_{0}$ is rejected
 
 ### d. Find the p-value for the test and interpret it.  
 
-P( z $\gt$ 4.6) $\approx$ 0 $\lt \alpha$, $H_{0}$ is rejected  
+P( z $\gt$ 4.6) = 1 - P(z $\lt$ 4.6) $\approx$ 0 $\lt \alpha$, $H_{0}$ is rejected  
 
 
