--- a/HW1123/08_蕭宇辰/CH09.04_Q11.md
+++ b/HW1123/08_蕭宇辰/CH09.04_Q11.md
@@ -26,7 +26,7 @@ c. $H_0$ : P = $\frac{2}{3}$
 
    $Z_stat$ = $$\frac{0.82-0.6667}{\sqrt{\frac{0.6667*0.3333}{200}}}$$ = 4.599
 
-   由 $$\alpha$$ = 0.05 reject region = {Z>1.645} ，因落在拒絕域中，故拒絕虛無假設，有證據顯示 P > 0.5，即篩查計劃有效
+   由 $$\alpha$$ = 0.05 reject region = {Z>1.645} ，因落在拒絕域中，故拒絕虛無假設，有證據顯示 P > $\frac{2}{3}$，即篩查計劃有效
 
 
 d. $H_0$ : P = $\frac{2}{3}$
@@ -39,4 +39,4 @@ d. $H_0$ : P = $\frac{2}{3}$
 
    P-value = P(Z>4.599) $$\approx$$ 0
 
-   由 P-value < $\alpha$ = 0.05 ，故拒絕虛無假設，有證據顯示 P > 0.5，即篩查計劃有效，結論與C相同
+   由 P-value < $\alpha$ = 0.05 ，故拒絕虛無假設，有證據顯示 P > $\frac{2}{3}$，即篩查計劃有效，結論與C相同
