--- a/HW1123/13_陳峻毅/CH09.04_Q11.md
+++ b/HW1123/13_陳峻毅/CH09.04_Q11.md
@@ -42,8 +42,9 @@ $z = \frac{0.82 - 0.6667}{\sqrt{\frac{0.6667 \cdot (1 - 0.6667)}{200}}} = \frac{
 $P(Z \geq 4.6) \approx 0.00000398$
 
 ![393481806-58127144-da30-47b5-b697-3dfebf25ae36](https://github.com/user-attachments/assets/a3b80eb8-de05-4ef4-8794-83cf310b4a1b)
-拒絕域表示: {Z:Z>1.645}
-
+拒絕域表示: {Z:Z>1.645}\
+拒絕域是一個範圍區間，是線\
+而 $\alpha$ 是區域面積
 ### 比較與結論
 - $\alpha = 0.05$
 - 比較：
