--- a/HW1123/13_陳峻毅/CH09.04_Q11.md
+++ b/HW1123/13_陳峻毅/CH09.04_Q11.md
@@ -49,8 +49,4 @@ $P(Z \geq 4.6) \approx 0.00000398$
 - $\alpha = 0.05$
 - 比較：
   $p = 0.00000398 < \alpha = 0.05$
-- **結論**：拒絕虛無假設 $H_0$。篩查計畫顯著提高了患者的存活率。
----
-## 結果報告
-**統計結果**：檢定統計量 z = 4.6，p-value = 0.00000398下，提供了有力證據支持該計畫可能有效提高了患者存活率
-
+- **結論**：拒絕虛無假設 $H_0$。由上述統計結果，有充足證據顯示篩查計畫顯著提高了患者的存活率。
