--- a/HW1123/13_陳峻毅/CH09.04_Q11.md
+++ b/HW1123/13_陳峻毅/CH09.04_Q11.md
@@ -49,4 +49,4 @@ $P(Z \geq 4.6) \approx 0.00000398$
 - $\alpha = 0.05$
 - 比較：
   $p = 0.00000398 < \alpha = 0.05$
-- **結論**：拒絕虛無假設 $H_0$。由上述統計結果，有充足證據顯示篩查計畫顯著提高了患者的存活率。
+- **結論**：拒絕虛無假設 $H_0$。由上述統計結果，有充足證據顯示篩查計畫可能提高了患者的存活率。
