--- a/HW1123/15_林秀鴻/CH10.02_Q20.md
+++ b/HW1123/15_林秀鴻/CH10.02_Q20.md
@@ -1,1 +1,74 @@
 
+# Question
+![image](https://github.com/user-attachments/assets/678415ec-184d-4763-9a58-5e8bec7e2f10)
+
+# Answer 
+
+已知CBF呈現常態分布，母體平均值為74
+
+隨機實驗25名腦中風病人，樣本平均值為69.7， 標準差為16
+
+選擇 $\alpha = 0.05 $, 做假設檢定
+
+$\mu = 74 $
+
+$\bar{x}$ = 69.7
+
+s = 16
+
+n = 25
+
+$\alpha = 0.05 $
+
+## Step 1 定義 $H_0$ 及 $H_1$　
+
+$H_0$ : $\mu$ = 74
+
+$H_a$ : $\mu\ne$ 74
+
+## Step 2 選擇Level of significance
+
+$\alpha = 0.05 $
+
+## Step 3 選擇檢定統計量
+
+因母體標準差未知，且樣本數小於30，故使用 $t = \frac{\bar{x} - \mu}{\frac{s}{\sqrt{n}}}$
+
+## Step 4 制定決策規則
+
+因平均值可能大於74或小於74，將 $\alpha = 0.05$ 平均分配在雙尾，為 $\alpha/2 = 0.025$
+
+![image](https://github.com/user-attachments/assets/84bbead8-ac7a-4c11-acd3-60abdc076f64)
+
+
+自由度為n -1 = 25-1 = 24
+
+根據 $\alpha = 0.05$ 及自由度 = 24，從 t 分布表查Critical Value為 2.064
+
+拒絕域：
+
+$t_{0.025}$ < -2.064
+
+$t_{0.025}$ > 2.064
+
+接受域：
+
+$t_{0.025} \leq t \leq t_{0.025}$ = $-2.064 \leq t \leq 2.064 $
+
+<img width="378" alt="image" src="https://github.com/user-attachments/assets/30b4611d-33f1-4f54-911a-10e469e165e7">
+
+## Step 5 計算檢定統計量
+
+$t^{*}$ = $\frac{(69.7-74)}{16/ \sqrt{25}}$ = -1.3438
+
+## Step 6 結論
+
+因統計量落在接受域中，因此無法拒絕 $H_0$
+
+腦中風病人的CBF與一般人無差異
+
+
+
+
+
+
