--- a/HW1123/10_蔡佳媛/CH10.01_Q06-07_10_Cathy.md
+++ b/HW1123/10_蔡佳媛/CH10.01_Q06-07_10_Cathy.md
@@ -1,2 +1,20 @@
 
 ![image](https://github.com/user-attachments/assets/2860f84c-9b3f-42f6-86e7-68bffecddc4c)
+
+
+### Find the tabled of t ( $t_{\alpha}$ ) corresponding to a *right-tail* area a and degrees of freedom given in exercise:
+
+#### 6. a = 0.1, df = 7  
+
+t = 1.415
+
+![image](https://github.com/user-attachments/assets/320b1953-b160-4855-a6ac-e7c0338ec47c)
+
+
+### Find the tabled of t ( $t_{\alpha}$ ) corresponding to a *left-tail* area a and degrees of freedom given in exercise:
+
+### 7. $\alpha$ = 0.01, df = 9  
+
+t = -2.821
+
+![image](https://github.com/user-attachments/assets/c11a177c-4f56-4d20-83c9-53be842db854)
