--- a/HW1123/15_林秀鴻/CH10.02_Q20.md
+++ b/HW1123/15_林秀鴻/CH10.02_Q20.md
@@ -47,13 +47,10 @@ $\alpha = 0.05 $
 
 拒絕域：
 
-$t_{0.025}$ < -2.064
+{t:$t_{0.025}$ < -2.064
 
-$t_{0.025}$ > 2.064
+$t_{0.025}$ > 2.064}
 
-接受域：
-
-$t_{0.025} \leq t \leq t_{0.025}$ = $-2.064 \leq t \leq 2.064 $
 
 <img width="378" alt="image" src="https://github.com/user-attachments/assets/30b4611d-33f1-4f54-911a-10e469e165e7">
 
@@ -63,7 +60,7 @@ $t^{*}$ = $\frac{(69.7-74)}{16/ \sqrt{25}}$ = -1.3438
 
 ## Step 6 結論
 
-因統計量落在接受域中，因此無法拒絕 $H_0$
+因統計量不落在拒絕域中，因此無法拒絕 $H_0$
 
 腦中風病人的CBF與一般人無差異
 
