--- a/HW1123/13_陳峻毅/CH10.02_Q20.md
+++ b/HW1123/13_陳峻毅/CH10.02_Q20.md
@@ -36,9 +36,9 @@ $t_\alpha = \pm 2.064$
 
 ### 比較檢定統計量與臨界值
 $t = -1.344 \quad \text{不落在拒絕域 } [-2.064, 2.064]$
-
+拒絕域表示: {t:t>2.064,t<2.064}
 ### 結論
-**不拒絕虛無假設 $H_0$**。沒有足夠證據表明中風患者的腦血流量與健康人有顯著差異。
+**不拒絕虛無假設 $H_0$**。從統計數據分析結果中有足夠證據顯示中風患者的腦血流量與健康人相同。
 ---
 ## d. p-value 計算
 
