--- a/HW1123/HW1123Q13.md
+++ b/HW1123/HW1123Q13.md
@@ -33,7 +33,7 @@ $\alpha = 0.05 $
 
 ## Step 3 選擇檢定統計量
 
-因母體標準差未知，且樣本數小於30，故使用 $t = \frac{\bar{x} - \mu}{\frac{s}{\sqrt{n}}}$
+因母體為常態分配，且樣本數小於30，故使用 $t = \frac{\bar{x} - \mu}{\frac{s}{\sqrt{n}}}$
 
 ## Step 4 制定決策規則
 
@@ -48,13 +48,7 @@ $\alpha = 0.05 $
 
 拒絕域：
 
-$t_{0.025}$ < -2.064
-
-$t_{0.025}$ > 2.064
-
-接受域：
-
-$t_{0.025} \leq t \leq t_{0.025}$ = $-2.064 \leq t \leq 2.064 $
+{t: t > 2.064, t < -2.064}
 
 <img width="378" alt="image" src="https://github.com/user-attachments/assets/30b4611d-33f1-4f54-911a-10e469e165e7">
 
