--- a/HW1123/05_張育菁/CH09.04_Q11.md
+++ b/HW1123/05_張育菁/CH09.04_Q11.md
@@ -1,31 +1,32 @@
 
+學號 513717007  張育菁
+
 ![image](https://github.com/user-attachments/assets/a56aa696-8296-4fa5-aa2b-923a7463f8ee)
 
-在那些被診斷為早期乳腺癌的女性中，其中有三分之一最終會死於該病。也就是說，存活率是 p =66.67%
-假設一項乳腺癌早期檢測計劃已啟動，目的是提高被診斷為該病的女性的生存率 p。從進行了篩查的200名被診斷為乳腺癌的女性中，隨機抽取了一個樣本，記錄了有多少人最終存活下來，設 x 為樣本中存活的女性數量。
+在那些被診斷為早期乳腺癌的女性中，其中有三分之一最終會死於該病。
+假設一項乳腺癌早期檢測計劃已啟動，目的是提高被診斷為該病的女性的存活率 p。從進行了篩查的200名被診斷為乳腺癌的女性中，隨機抽取了一個樣本，記錄了有多少人最終存活下來，設 x 為樣本中存活的女性數量。
 
-a. 如果希望判斷篩查計劃是否有效，應檢驗的對立假設是什麼？
 
-b. 說明虛無假設。
-
-c. 如果在樣本中有 164 名女性生存，是否可以得出篩查計劃有效的結論？使用 α=0.05 進行檢驗，並解釋檢驗的實際結論。
-
-d. 計算檢驗的 p-value 並解釋其含義
 
 答案:
 
-a. 
-對立假設檢測計畫的目的是提升存活率，在這裡，我們希望證明計畫有效，也就是存活率 p 比原來的 66.67%更高：
 
-$H_a$: P> $\frac{2}{3}$=0.6667
+### a. 如果希望判斷篩查計劃是否有效，應檢驗的對立假設是什麼？
 
-b. 
-虛無假設是檢測計畫對存活率無影響，假設「計畫沒有效果」，也就是存活率沒有改變，仍然是 66.67%
+對立假設檢測計畫的目的是提升存活率：
 
-$H_0$: P = $\frac{2}{3}$=0.6667
+### $H_a$: P> $\frac{2}{3}$=0.6667
 
-c. 
-假設檢定（用數據來檢查計畫是否有效）, 我們要進行單尾檢定，檢驗 $H_0$ 是否成立。
+
+### b. 說明虛無假設。
+虛無假設是檢測計畫對存活率無影響，假設「計畫沒有效果」
+
+### $H_0$: P = $\frac{2}{3}$=0.6667
+
+
+### c. 如果在樣本中有 164 名女性生存，是否可以得出篩查計劃有效的結論？使用 α=0.05 進行檢驗，並解釋檢驗的實際結論。
+
+所以我們要進行單尾檢定，檢驗 $H_0$ 是否成立。
 
 已知條件，樣本資訊：
 
@@ -37,56 +38,65 @@ o	樣本存活率 $\hat{p} = \frac{x}{n} = \frac{164}{200} = 0.82$
 
 o	原假設效果下的存活率 $P_0$= 0.6667
 
-$H_0$ : P = $\frac{2}{3}$
-   
-$H_a$ : P > $\frac{2}{3}$
+### 檢定的流程
 
-檢定統計量公式： 使用以下公式計算標準化統計量Z
+### 1. 計算檢定統計量Z
 
-由The Slutsky's theorem: $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}}$$ -> Z
+我們使用標準化公式計算檢定統計量:  $Z_{STAT}$ = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}}$$
 
-$Z_stat$ = $$\frac{0.82-0.6667}{\sqrt{\frac{0.6667*0.3333}{200}}}$$ = 4.599 ${\approx}$ 4.6
+將數據代入公式： Z*= $$\frac{0.82-0.6667}{\sqrt{\frac{0.6667*0.3333}{200}}}$$ = 4.599 ${\approx}$ 4.6
 
-由 $$\alpha$$ = 0.05 reject region = {Z>1.645} ，
+### 2. 確定臨界值
 
-臨界值： 單尾檢定的顯著水準 α=0.05，對應的標準常態分布臨界值為 $z_α$=1.645。
+檢定類型是 單尾檢定（右尾檢定）
 
-檢定結論： 因為 z=4.60>1.645，拒絕 $H_0$，落在拒絕域內。所以我們認為檢測計畫有效！
+單尾檢定的顯著水準 α=0.05，對應的標準常態分布臨界值為 $𝑧_𝛼$=1.645。
 
-![image](https://github.com/user-attachments/assets/81209330-7a48-4d41-ab7e-7cba6ad87647)
+### 3. 判斷檢定結果
 
-![image](https://github.com/user-attachments/assets/2c5ff932-72ac-4d07-89f4-85c1fbbff4be)
+我們比較檢定統計量 𝑧*=4.60 與臨界值 $𝑧_𝛼$=1.645：
 
+ 𝑧*=4.60 > $𝑧_𝛼$=1.645
 
-d. 
+ 因為 𝑧超過了臨界值，我們拒絕 $H_0$
+​
+### 4.檢定結論：
 
-$H_0$ : P = $\frac{2}{3}$
-   
-$H_a$ : P > $\frac{2}{3}$
+在significance level 顯著水準 $\alpha = 0.05$下，因為 𝑧*=4.60 > $𝑧_𝛼$=1.645，拒絕 $H_0$，落在拒絕域內。所以我們認為檢測計畫有效，提高了存活率。
 
-由The Slutsky's theorem: $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}}$$ -> Z
-
-$Z_stat$ = $\frac{0.82-0.6667}{\sqrt{\frac{0.6667*0.3333}{200}}}$ = 4.599 ${\approx}$ 4.6
-
-p 值表示在 $H_0$ 成立的前提下，觀察到像 $\hat{p}= 0.82$ 或更極端值的概率。
-
-p-value=P(Z>4.60)
-
-查標準常態分布表得：
-
-$p\text{-value} \approx 0.000003$
+![image](https://github.com/user-attachments/assets/58127144-da30-47b5-b697-3dfebf25ae36)
 
 
-解釋： p 值非常小，遠小於α= 0.05, 意味著在虛無假設成立的條件「計畫無效」的假設下，
 
-觀察到樣本存活率 82%，那82% 幾乎是不可能的。
 
-這進一步支持結論：所以檢測計畫有效，提高了存活率。
 
-![image](https://github.com/user-attachments/assets/b691da4d-dbbb-4424-98ec-1890d1e2069d)
+### d. 計算檢驗的 p-value 並解釋其含義
 
-![image](https://github.com/user-attachments/assets/79eaed85-7a57-4405-a584-41af09a6662b)
+### 1. 計算檢定統計量Z
 
-![image](https://github.com/user-attachments/assets/b0abd65d-d5c8-451c-ab13-b4c18e783247)
+我們使用標準化公式計算檢定統計量:  $Z_{STAT}$ = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}}$$
+
+將數據代入公式： Z*= $$\frac{0.82-0.6667}{\sqrt{\frac{0.6667*0.3333}{200}}}$$ = 4.599 ${\approx}$ 4.6
+
+### 2.計算p-value
+
+計算右尾的累積機率 P(𝑍>4.60)。
+
+p-value=1−P(Z≤4.60)
+
+步驟：
+
+### 1.查找 𝑍*=4.60的累積機率 𝑃(𝑍≤4.60)。
+
+P(Z≤4.60)≈0.999997
+
+### 2.計算右尾累積機率：
+
+p-value=1−0.999997=0.000003 < α=0.05 
+
+### 3.檢定結論：
+
+P 值 ≈0.000003 是一個極小的值，
+因此在significance level 顯著水準 $\alpha = 0.05$下, 拒絕 $H_0$，所以我們認為檢測計畫有效，提高了存活率。
 
 
