--- a/HW1123/15_林秀鴻/CH10.02_Q21.md
+++ b/HW1123/15_林秀鴻/CH10.02_Q21.md
@@ -17,4 +17,4 @@ sol:
 
 計算90%信賴區間 [28.7 - 1.746 * $\frac{8.6}{\sqrt{17}}$ , 28.7 + 1.746 * $\frac{8.6}{\sqrt{17}}$]
 
-知90%信賴區間為 [25.0578 , 32.3422] 
+所以在重複取樣下，知90%信賴區間為 [25.0578 , 32.3422] 
