--- a/HW1123/HW1123Q13.md
+++ b/HW1123/HW1123Q13.md
@@ -58,7 +58,7 @@ $t^{*}$ = $\frac{(69.7-74)}{16/ \sqrt{25}}$ = -1.3438
 
 ## Step 6 結論
 
-因統計量落在接受域中，因此無法拒絕 $H_0$
+因統計量未落在拒絕域中，因此無法拒絕 $H_0$
 
 腦中風病人的CBF與一般人無差異
 
