--- a/HW1123/19_黃家鈞/CH09.02_Q08-10.md
+++ b/HW1123/19_黃家鈞/CH09.02_Q08-10.md
@@ -1,1 +1,30 @@
 
+![image](https://github.com/user-attachments/assets/488850c4-f2e1-439f-bb18-fe59d58ec5e7)
+
+## Find the appropriate rejection regions and state your conclusion if z = -2.41
+
+![image](https://github.com/user-attachments/assets/d1dfcf58-a7b6-4167-bf2b-e67fff104c8e)
+
+### 8. A left-tailed test with $\alpha = 0.01$
+
+$z_{-0.01} = -2.33$
+
+Compare the observed value of the test statistic, z = -2.41, with the critical value necessary for rejection, $z_{-0.01} = -2.33$.  
+Since the observed value of the test statistic falls in the rejection region (z = -2.41 is less than -2.33), reject $H_{0}$.  
+The probability of making an incorrect decision is $\alpha = 0.01$  
+
+### 9. A left-tailed test with $\alpha = 0.05$
+
+$z_{-0.05} = -1.645$
+
+Compare the observed value of the test statistic, z = -2.41, with the critical value necessary for rejection, $z_{-0.05} = -1.645$.  
+Since the observed value of the test statistic falls in the rejection region (z = -2.41 is less than -1.645), reject $H_{0}$.  
+The probability of making an incorrect decision is $\alpha = 0.05$  
+
+### 10. A two-tailed test with $\alpha = 0.02$
+
+$z_{\frac{0.02}{2}} = 2.33$, so the critical values are -2.33 and 2.33  
+
+Compare the observed value of the test statistic, z = -2.41, with the critical value necessary for rejection, $z_{-0.01} = -2.33$.  
+Since the observed value of the test statistic falls in the rejection region (z = -2.41 is less than -2.33), reject $H_{0}$.  
+The probability of making an incorrect decision is $\alpha = 0.02$  
