--- a/HW1123/19_黃家鈞/CH09.02_Q24.md
+++ b/HW1123/19_黃家鈞/CH09.02_Q24.md
@@ -1,5 +1,5 @@
-![image](https://github.com/user-attachments/assets/18f55c70-c63f-4891-9875-db1688f6cc0c)
-![image](https://github.com/user-attachments/assets/33db578f-9d84-4d58-b18b-f8174bbffcef)
+![image](https://github.com/user-attachments/assets/18f55c70-c63f-4891-9875-db1688f6cc0c)https://octodex.github.com/  #99
+![image](https://github.com/user-attachments/assets/33db578f-9d84-4d58-b18b-f8174bbffcef)https://images.app.goo.gl/36efeQmFMT9shHgbA
 
 ![image](https://github.com/user-attachments/assets/c849f7e3-ff54-44e8-8793-e7c5daffb401)
 ![image](https://github.com/user-attachments/assets/f2680456-3b87-46c5-9447-c2405cd25322)
