--- a/HW1123/HW1123Q04.md
+++ b/HW1123/HW1123Q04.md
@@ -27,11 +27,15 @@ http://homepage.ntu.edu.tw/~clhsieh/biostatistic/
 
 n = 40 > 30，by Slutsky's T
 
-$Z_{STAT}$ = $\frac{\bar{x} - \mu_0}{s / \sqrt{n}} = \frac{5.56 - 5.86}{0.70 / \sqrt{40}} = \frac{-0.30}{0.70 / 6.3246} \approx \frac{-0.30}{0.1107} \approx -2.71$
+
+$Z_{STAT}$ = $\frac{\bar{x} - \mu_0}{s / \sqrt{n}} \rightarrow^d Z$
+
+z* = $\frac{5.56 - 5.86}{0.70 / \sqrt{40}} = \frac{-0.30}{0.70 / 6.3246} \approx \frac{-0.30}{0.1107} \approx -2.71$
 
 顯著水準α = 0.05，臨界值 - $Z_{α}$ = -1.645，rejection region ={z : z<-1.645}
 
 z* > -1.645，不拒絕 H₀
+
 z* $\leq$ -1.645，拒絕 H₀
 
 -2.71 < -1.645，故拒絕
