--- a/HW1123/19_黃家鈞/CH09.02_Q23.md
+++ b/HW1123/19_黃家鈞/CH09.02_Q23.md
@@ -1,6 +1,6 @@
-![image](https://github.com/user-attachments/assets/721356f2-dfd1-4520-b236-c6173577b377)
+![391332104-4971b4ff-9cbb-4e1a-a056-674fd537535f](https://github.com/user-attachments/assets/f7095828-2734-43b7-ba30-5a52c3581647)
 
-牛絞肉被包裝在小托盤中，目的是用來容納 1 磅的肉。一個包含 35 個小托盤隨機樣本的測量結果顯示，平均重量為 1.01 磅，標準差為 0.18 磅。
+牛絞肉被包裝在小托盤中，設計用來裝 1 磅的肉。一個隨機抽樣的 35 個小托盤包裝中，測得重量的平均值為 1.01 磅，標準差為 0.18 磅。
 
 <img width="487" alt="image" src="https://github.com/user-attachments/assets/a1b34a8a-801b-4d8a-91e9-fd81340bcd60">
 
