--- a/HW1123/19_黃家鈞/CH09.04_Q04-06.md
+++ b/HW1123/19_黃家鈞/CH09.04_Q04-06.md
@@ -1,1 +1,37 @@
+![image](https://github.com/user-attachments/assets/b2d8f278-1e01-49e9-afe8-91a20ad3878f)
+<img width="472" alt="image" src="https://github.com/user-attachments/assets/4efd61e8-db23-43c0-8730-ae85efb16fc1">
 
+
+
+
+<img width="373" alt="image" src="https://github.com/user-attachments/assets/8bc6b645-71bd-4c75-9240-d6e13158742b">
+
+
+
+
+
+
+
+<img width="433" alt="image" src="https://github.com/user-attachments/assets/6ac854d0-b5bc-49fe-8620-54ff5183c3f1">
+4.
+
+**Hypotheses**  
+$H_0$: $p = 0.3$  
+$H_a$: $p < 0.3$ (Left-tailed test)  
+
+- n = 1000, x = 279  
+- Sample proportion:  
+  $\hat{p} = \frac{x}{n} = \frac{279}{1000} = 0.279$
+
+**Test Statistic Formula**:  
+$z = \frac{\hat{p} - p_0}{\sqrt{p_0 (1 - p_0) / n}}$
+
+**Calculation**:  
+$z = \frac{0.279 - 0.3}{\sqrt{0.3(1 - 0.3) / 1000}}$  
+   = $\frac{-0.021}{\sqrt{0.00021}}$  
+   = $\frac{-0.021}{0.01449} \approx -1.45$
+
+**P-value**:  
+$P(Z < -1.45) \approx 0.0735$
+
+Since **P-value > $\alpha$ = 0.05**, we fail to reject the null hypothesis, and there is insufficient evidence to support that **P < 0.3**.
