--- a/HW1123/10_蔡佳媛/CH10.02_Q20_10_Cathy.md
+++ b/HW1123/10_蔡佳媛/CH10.02_Q20_10_Cathy.md
@@ -22,4 +22,4 @@ $t_{\frac{\alpha}{2}, n-1}$ = $t_{0.025, 24}$ = 2.064
 ![image](https://github.com/user-attachments/assets/38ac714d-2784-45c1-b9d1-2394af324062)
 
 Reject $H_{0}$ if t $\gt$ 2.064 or t $\lt$ -2.064.  
-The test statistic is greater than -2.064, does not fall into the rejection region, $H_{0}$ is not rejected.
+The test statistic, -1.34, is between -2.064 and 2.064, does not fall into the rejection region, $H_{0}$ is not rejected.
