--- a/HW1123/10_蔡佳媛/CH10.02_Q21_10_Cathy.md
+++ b/HW1123/10_蔡佳媛/CH10.02_Q21_10_Cathy.md
@@ -1,2 +1,19 @@
 
 ![image](https://github.com/user-attachments/assets/d0cade95-5fe3-4a58-be5b-9a178edd4fed)
+
+n = 17
+$\bar{x}$ = 28.7  
+s = 8.6  
+
+
+### Find a 90% confidence interval for the mean growth of a population of 4-year-old red pine trees  
+
+$\alpha$ = 0.1  
+
+![image](https://github.com/user-attachments/assets/5b307e77-dddd-44a5-adb8-b59e2068993f)  
+
+confidence interval for $\mu$ as $\bar{x} \pm t_{ ( n - 1 );\alpha/2} \times \frac{s}{\sqrt{n}}$  
+
+90% confidence interval for $\mu$ = 28.7 $\pm t_{ 16; 0.05 }$ \times \frac{8.6}{\sqrt{17}} = [25.058182, 32.341818]
+
+![image](https://github.com/user-attachments/assets/051df90a-f545-4c98-903d-802e3348f53b)
