--- a/HW1123/10_蔡佳媛/CH10.02_Q21_10_Cathy.md
+++ b/HW1123/10_蔡佳媛/CH10.02_Q21_10_Cathy.md
@@ -14,6 +14,6 @@ $\alpha$ = 0.1
 
 confidence interval for $\mu$ as $\bar{x} \pm t_{ ( n - 1 );\alpha/2} \times \frac{s}{\sqrt{n}}$  
 
-90% confidence interval for $\mu$ = 28.7 $\pm t_{ 16; 0.05 }$ \times \frac{8.6}{\sqrt{17}} = [25.058182, 32.341818]
+90% confidence interval for $\mu$ = 28.7 $\pm t_{ 16; 0.05 } \times \frac{8.6}{\sqrt{17}}$ = [25.058182, 32.341818]
 
 ![image](https://github.com/user-attachments/assets/051df90a-f545-4c98-903d-802e3348f53b)
