--- a/HW1109/12_譚玥湄/CH07.02_Q9.md
+++ b/HW1109/12_譚玥湄/CH07.02_Q9.md
@@ -1,15 +1,20 @@
 CH07.02_Q9
 A population consists of N = 4 numbers: 10, 15, 21, 22 with a mean of m = 17. 
-A random sample of n= 2 is selected in one of two ways: first, without replacement and second, with replacement. 
+A random sample of n= 2 is selected in one of two ways: first, without replacement and second, with replacement.  
 
-9. Find the mean of x for each of the distributions in Exercises 7 and 8.
+Q9. Find the mean of x for each of the distributions in Exercises 7 and 8.
 How do they compare with the population mean of m =17?
 
-1. Sampling Without Replacement  
-•	Sample means: 12.5,15.5,16,18,18.5,21.5  
-•	Probabilities: P($$\overline{x}$$)=17≈0.167  
-•	$$μ\overline{x}$$=(12.5⋅0.167)+(15.5⋅0.167)+(16⋅0.167)+(18⋅0.167)+(18.5⋅0.167)+(21.5⋅0.167)
-________________________________________
-2. Sampling With Replacement  
-•	Sample means: 10,12.5,15,15.5,16,18,18.5,21,21.5,22  
-•	Probabilities: P($$\overline{x}$$)= frequency /  16 
+樣本平均數的總平均值公式：   
+- Mean : μ=E[x]=Σ(xi) * p(xi)  
+  期望值是所有隨機變量的值與其發生機率相乘後的總和 
+  
+- Exercises 7 . Sampling Without Replacement  
+![image](https://github.com/user-attachments/assets/bf3b4563-9518-4112-aa39-e19af7aa3dd0)  
+ Mean of $\overline{x}$  =(12.5 * 0.167)+(15.5 * 0.167)+(16 * 0.167)+(18 * 0.167)+(18.5 * 0.167)+(21.5 * 0.167)  = 17  
+
+
+- Exercises 8. Sampling With Replacement  
+![image](https://github.com/user-attachments/assets/db0328e0-bce0-4fcc-88b8-1766f428d7cd)
+Mean of $\overline{x}$  =(10 * 0.0625)+(12.5 * 0.125)+(15 * 0.0625)+(15.5 * 0.125)+(16 * 0.125)+(18 * 0.125)+(18.5 * 0.125)+(21 * 0.0625)+(21.5 * 0.125)+(22 * 0.0625)  = 17  
+
