--- a/HW1109/12_譚玥湄/CH07.02_Q9.md
+++ b/HW1109/12_譚玥湄/CH07.02_Q9.md
@@ -7,32 +7,35 @@ How do they compare with the population mean of m =17?
 
 樣本平均數的總平均值公式：   
 - Mean : μ=E[x]=Σ(xi) * p(xi)  
-  期望值是所有隨機變量的值與其發生機率相乘後的總和 
+  期望值是所有隨機變量的值與其發生機率相乘後的總和  
   
-- Exercises 7 . Sampling Without Replacement  
+Exercises 7. Sampling Without Replacement  
 | Possible samples|   x̄ |      P(x̄) | 
 |----------------:|:----:|:----:|
-|{10,15}| 12.5 | 1/6=0.167|
+|{10,15}| 12.5  | 1/6=0.167|
 |{10,21}|  15.5 | 1/6=0.167|
 |{10,22}|  16.0 | 1/6=0.167|
 |{15,21}|  18.0 | 1/6=0.167|
 |{15,22}|  18.5 | 1/6=0.167|
-|{21,22}|  21.5 | 1/6=0.167|  
+|{21,22}|  21.5 | 1/6=0.167|
+
  Mean of $\overline{x}$  =(12.5 * 0.167)+(15.5 * 0.167)+(16 * 0.167)+(18 * 0.167)+(18.5 * 0.167)+(21.5 * 0.167)  = 17  
 
+-----
 
-- Exercises 8. Sampling With Replacement  
+Exercises 8. Sampling With Replacement
 | Possible samples|   x̄ |      P(x̄) | 
 |----------------:|:----:|:----:|
-|{10,10}| 10 | 1/16=0.0625|
+|{10,10}| 10   | 1/16=0.0625|
 |{10,15}| 12.5 | 2/16=0.125|
-|{15,15}| 15 | 1/16=0.0625|
 |{10,21}| 15.5 | 2/16=0.125|
-|{10,22}| 16 | 2/16=0.125|
-|{15,21}| 18 | 2/16=0.125|
+|{10,22}| 16   | 2/16=0.125|
+|{15,15}| 15   | 1/16=0.0625|
+|{15,21}| 18   | 2/16=0.125|
 |{15,22}| 18.5 | 2/16=0.125|
-|{21,21}| 21 | 1/16=0.0625|
-|{21,22}| 21.5| 2/16=0.125|
-|{22,22}| 22| 1/16=0.0625|  
+|{21,21}| 21   | 1/16=0.0625|
+|{21,22}| 21.5 | 2/16=0.125|
+|{22,22}| 22   | 1/16=0.0625|  
+
 Mean of $\overline{x}$  =(10 * 0.0625)+(12.5 * 0.125)+(15 * 0.0625)+(15.5 * 0.125)+(16 * 0.125)+(18 * 0.125)+(18.5 * 0.125)+(21 * 0.0625)+(21.5 * 0.125)+(22 * 0.0625)  = 17  
 
