--- a/HW1123/HW1123Q01.md
+++ b/HW1123/HW1123Q01.md
@@ -5,7 +5,7 @@
 
 
 
-Q8 . 左尾檢定，顯著水準 α=0.01 ，Z=-2.33，若Z小於-2.33則落入拒絕區。
+Q8 . 左尾檢定，顯著水準 α=0.01 ，Z=-2.33，若Z小於-2.33則落入拒絕區，拒絕區 : Z < -2.33
 
 Z=-2.41落入拒絕區
 
@@ -21,7 +21,7 @@ Z=-2.41落入拒絕區
 
  
 
-Q9 . 左尾檢定，顯著水準 α=0.05 ，Z=-1.645，若Z小於-1.645則落入拒絕區。
+Q9 . 左尾檢定，顯著水準 α=0.05 ，Z=-1.645，若Z小於-1.645則落入拒絕區, 拒絕區 : Z < -1.645
 
 Z=-2.41落入拒絕區
 ![image](https://github.com/user-attachments/assets/1581844e-a2de-4588-bcab-054a5830496d)
@@ -34,5 +34,6 @@ Z=-2.41落入拒絕區
 Q10.  雙尾檢定，顯著水準 α=0.02，P=0.008*2 小於 α=0.02 → P=0.008 小於 α=0.01，落入拒絕區在該顯著水準下拒絕該虛無假說
 
 單邊的 α=0.01，左尾的拒絕區為小於-2.33，右尾的拒絕區為大於2.33
+拒絕區 : 2.33 < Z < -2.33
 
 
