--- a/HW1207/HW1207Q01.md
+++ b/HW1207/HW1207Q01.md
@@ -1,2 +1,11 @@
 ## 學號：513717017 沈佩如
 
+![image](https://github.com/user-attachments/assets/16dcc8cd-be1e-4b24-bb7f-ae62d224bd83)
+
+![image](https://github.com/user-attachments/assets/65e31f31-f0da-4eab-bd62-ecf3e2699638)
+
+![image](https://github.com/user-attachments/assets/5d71ecc0-e700-4125-9976-f685bd5f7c4f)
+
+## 我們一起互相扶持，在共善共好中，成就彼此，祝福大家新年快樂...!!
+
+
