--- a/HW1207/09_沈佩如/CH12.01_Q22.md
+++ b/HW1207/09_沈佩如/CH12.01_Q22.md
@@ -1,3 +1,7 @@
 ## 學號：513717017 沈佩如
 
+![image](https://github.com/user-attachments/assets/526f86ad-6e34-4681-a16e-aaa2125c03d9)
+
+![image](https://github.com/user-attachments/assets/ee2e2243-c045-46e6-a922-1c2cf8371d7c)
+
 ## 由題目得知：
