--- a/HW1207/09_沈佩如/CH12.03_Q10.md
+++ b/HW1207/09_沈佩如/CH12.03_Q10.md
@@ -1,3 +1,6 @@
 ## 學號：513717017 沈佩如
 
+![image](https://github.com/user-attachments/assets/5d910d0e-73cd-4efb-bbc2-09662148115e)
+![image](https://github.com/user-attachments/assets/e20cbb4d-86cf-4c5b-8d34-36de52080331)
+
 ## 由題目得知：
