--- a/HW1207/09_沈佩如/CH12.05_Q09.10.md
+++ b/HW1207/09_沈佩如/CH12.05_Q09.10.md
@@ -1,3 +1,6 @@
 ## 學號：513717017 沈佩如
 
+![image](https://github.com/user-attachments/assets/d880f0dd-5fed-4382-9cb3-09faa423c137)
+![image](https://github.com/user-attachments/assets/137c8b40-b6a8-4d45-81bb-5652795c5c99)
+
 ## 由題目得知：
