--- a/HW1207/09_沈佩如/CH12.01_Q17.md
+++ b/HW1207/09_沈佩如/CH12.01_Q17.md
@@ -2,7 +2,9 @@
 
 ![image](https://github.com/user-attachments/assets/36129b41-c363-4ad0-a215-e8d537248006)
 
-## 由題目得知：使用第題中給出的數字，計算平方和與交叉乘積，$ S\sub xy $。求出最小平方法回歸線的方程式。繪製數據點並在同一圖表上畫出回歸線。這條回歸線是否能很好地擬合數據點？
+## 由題目得知：使用第題中給出的數字，計算平方和與交叉乘積，
+$ S x y^2 $。
+求出最小平方法回歸線的方程式。繪製數據點並在同一圖表上畫出回歸線。這條回歸線是否能很好地擬合數據點？
 
 我們要用最小平方法（least-squares method）來計算回歸線。題目中給出的數據為：x=−2,−1,0,1  y=1,1,3,5
 
