--- a/HW1207/09_沈佩如/CH12.01_Q17.md
+++ b/HW1207/09_沈佩如/CH12.01_Q17.md
@@ -2,6 +2,6 @@
 
 ![image](https://github.com/user-attachments/assets/36129b41-c363-4ad0-a215-e8d537248006)
 
-## 由題目得知：使用題中給出的數字，計算平方和與交叉乘積 $S_{x^2} , S_{xy} $。求出最小平方法迴歸線的方程式。繪製數據點並在同一圖表上畫出回歸線。這條回歸線是否能很好地擬合數據點？
+## 由題目得知：使用題中給出的數字，計算平方和與交叉乘積 $S_{x^2} , S_{xy} $。求出最小平方法迴歸線的方程式。繪製數據點並在同一圖表上畫出迴歸線。這條迴歸線是否能很好地擬合數據點？
 
 
