--- a/HW1109/12_譚玥湄/CH07.03_Q23.md
+++ b/HW1109/12_譚玥湄/CH07.03_Q23.md
@@ -6,18 +6,18 @@ b. The average is greater than 1120.
 c. The average is less than 900.  
 
 ---
-- Sample mean ($\overline{x}$) =1110 days
-- Sample size(n) = 400
-- standard deviation(s) = 80
+- Sample mean ($\overline{x}$) =1110 days  
+- Sample size(n) = 400  
+- standard deviation(s) = 80  
 
-Step 1: Standard error of the mean  
-The standard error of the mean (SEM) is calculated as:  
-$$SEM= \frac{\sigma}{\sqrt{n}}$$   
-$$SEM= \frac{80}{\sqrt{400}} $$   = 4  
+**Step 1: Standard error of the mean**  
+The standard error of the mean (SEM) is calculated as:
+<li>    $$SEM= \frac{\sigma}{\sqrt{n}}$$   
+<li>    $$SEM= \frac{80}{\sqrt{400}} $$ = 4  
 
 Step 2: Standardizing (Z-scores)
-For each probability, we calculate the Z-score using the formula:  
-Z-scores = $$\frac{\bar{x} - \mu}{\text{SEM}} $$  
+  For each probability, we calculate the Z-score using the formula:  
+  Z-scores = $$\frac{\bar{x} - \mu}{\text{SEM}} $$  
 
 ---
 use Central limit Therem  
@@ -37,4 +37,28 @@ c. The average is less than 900.
 For $$\bar{x}$$ < 900  : Z-scores = $$\frac{{900} - 1110}{\text{4}} $$  = -52.5  
 P(z<-52.5 )= 0 
 
+
+
+#### (b) p 值
+
+1. **計算 p 值：**
+    p 值是 \(t = -2.71\) 在 \(t\)-分佈（自由度 \(df = 39\)）下左尾的累積面積。
+    
+    使用統計軟體或 \(t\)-表查得：
+    \[
+    \text{p-value} \approx 0.005
+    \]
+
+2. **比較 p 值與 \(\alpha\)：**
+    - 若 \(\text{p-value} < \alpha = 0.05\)，則拒絕 \(H_0\)。
+    - 因為 \(\text{p-value} = 0.005 < 0.05\)，**拒絕 \(H_0\)**。
+
+3. **實際意義：**
+    極小的 p 值表示對 \(H_0\) 的強烈反駁。該診所的 3 個月大女嬰的平均體重顯著低於 \(5.86\) 公斤。
+
+---
+
+### **最終結果**
+- **(a):** 拒絕 \(H_0\)。數據表明平均體重小於 \(5.86\) 公斤。
+- **(b):** \( \text{p-value} = 0.005 \)。根據 p 值，在 5% 顯著水準下拒絕 \(H_0\)。
   
