--- a/HW1207/09_沈佩如/CH12.01_Q17.md
+++ b/HW1207/09_沈佩如/CH12.01_Q17.md
@@ -14,4 +14,6 @@ $$\sum {y^2} = 1^2 + 1^2 + 3^2 + 5^2 + 5^2 = 61 $$
 
 $$\sum xy = (-2)(1) + (-1)(1) + (0)(3) + (1)(5) + (2)(5) = 12 $$
 
-$$\bar{x}=59.2$$
+$$\bar{x} = \frac{(-2)+(-1)+0+1+2}{5} = 0 $$
+
+$$\bar{y} = \frac{1+1+3+5+5}{5} = 3 $$
