--- a/HW1207/09_沈佩如/CH12.01_Q17.md
+++ b/HW1207/09_沈佩如/CH12.01_Q17.md
@@ -17,3 +17,7 @@ $$\sum xy = (-2)(1) + (-1)(1) + (0)(3) + (1)(5) + (2)(5) = 12 $$
 $$\bar{x} = \frac{(-2)+(-1)+0+1+2}{5} = 0 $$
 
 $$\bar{y} = \frac{1+1+3+5+5}{5} = 3 $$
+
+$$S_{xx} = \sum {x^2} - \frac{(\sum{x})^2}{n} = 10 - \frac{(0)^2}{5} = 10 $$
+
+$$S_{xy} = \sum {xy} - \frac{\sum{x}\sum{y}}{n} = 12 - \frac{(0)(15)}{5} = 12 $$
