--- a/HW1207/09_沈佩如/CH12.01_Q17.md
+++ b/HW1207/09_沈佩如/CH12.01_Q17.md
@@ -20,7 +20,7 @@
 >
 >$$S_{xx} = \sum {x^2} - \frac{(\sum{x})^2}{n} = 10 - \frac{(0)^2}{5} = 10 $$
 >
->$$S_{xy} = \sum {xy} - \frac{\sum{x}\sum{y}}{n} = 12 - \frac{(0)(15)}{5} = 12 $$
+>$S_{xy} = \sum {xy} - \frac{\sum{x}\sum{y}}{n} = 12 - \frac{(0)(15)}{5} = 12 $
 >
 >斜率: $$b = \frac{S_{xy}}{S_{xx}} = \frac{12}{10} = 1.2 $$   							
 >							
