--- a/HW1207/09_沈佩如/CH12.01_Q17.md
+++ b/HW1207/09_沈佩如/CH12.01_Q17.md
@@ -26,4 +26,7 @@
 >							
 >截距: $$a= \bar{y}-b*\bar{x} = 3 - (1.2)(0) = 3 $$							
 >						
->least-square line : $$y = 3 + 1.2x $$		
+>least-square line : $$y = 3 + 1.2x $$
+>
+>![image](https://github.com/user-attachments/assets/abe83330-689a-4eab-85be-72ba4d47ea61)
+
