--- a/HW1207/HW1207Q01.md
+++ b/HW1207/HW1207Q01.md
@@ -12,3 +12,30 @@
 
 ![image](https://github.com/user-attachments/assets/b8dd7108-115d-4520-8600-a4a7c1ae7011)
 
+## 由題目得知：使用題中給出的數字，計算平方和與交叉乘積 $S_{xx} , S_{xy} $。求出最小平方法迴歸線的方程式。繪製數據點並在同一圖表上畫出迴歸線。這條迴歸線是否能很好地擬合數據點？
+>
+>$\sum x = (-2)+(-1) + 0 + 1 + 2 = 0 $
+>
+>$\sum y = 1 + 1 + 3 + 5 + 5 = 15 $
+>
+>$\sum {x^2} = (-2)^2 +(-1)^2 + 0^2 + 1^2 + 2^2 = 10 $
+>
+>$\sum {y^2} = 1^2 + 1^2 + 3^2 + 5^2 + 5^2 = 61 $
+>
+>$\sum xy = (-2)(1) + (-1)(1) + (0)(3) + (1)(5) + (2)(5) = 12 $
+>
+>$\bar{x} = \frac{(-2)+(-1)+0+1+2}{5} = 0 $
+>
+>$\bar{y} = \frac{1+1+3+5+5}{5} = 3 $
+>
+>$S_{xx} = \sum {x^2} - \frac{(\sum{x})^2}{n} = 10 - \frac{(0)^2}{5} = 10 $
+>
+>$S_{xy} = \sum {xy} - \frac{\sum{x}\sum{y}}{n} = 12 - \frac{(0)(15)}{5} = 12 $
+>
+>斜率: $$b = \frac{S_{xy}}{S_{xx}} = \frac{12}{10} = 1.2 $$   							
+>							
+>截距: $$a= \bar{y}-b*\bar{x} = 3 - (1.2)(0) = 3 $$							
+>						
+>least-square line : $$y = 3 + 1.2x $$
+>
+>![image](https://github.com/user-attachments/assets/19f582da-ff78-4355-8383-76aefb323eb5)
