--- a/HW1207/HW1207Q01.md
+++ b/HW1207/HW1207Q01.md
@@ -12,7 +12,7 @@
 
 ![image](https://github.com/user-attachments/assets/b8dd7108-115d-4520-8600-a4a7c1ae7011)
 
-## 由題目得知：使用題中給出的數字，計算平方和與交叉乘積 $S_{xx} , S_{xy} $。求出最小平方法迴歸線的方程式。繪製數據點並在同一圖表上畫出迴歸線。這條迴歸線是否能很好地擬合數據點？
+## 由題目得知：使用題中給出的數字，計算平方和與交叉乘積 $S_{xx} , S_{xy} $。求出最小平方法迴歸線的方程式。繪製數據點並在同一圖表上畫出迴歸線。這條迴歸線與這些資料匹配嗎？
 >
 >$\sum x = (-2)+(-1) + 0 + 1 + 2 = 0 $
 >
