--- a/HW1207/HW1207Q01.md
+++ b/HW1207/HW1207Q01.md
@@ -36,6 +36,6 @@
 >							
 >截距: $$a= \bar{y}-b*\bar{x} = 3 - (1.2)(0) = 3 $$							
 >						
->least-square line : $$y = 3 + 1.2x $$
+>least-square line : $$\hat{y} = 3 + 1.2x $$
 >
 >![image](https://github.com/user-attachments/assets/19f582da-ff78-4355-8383-76aefb323eb5)
