--- a/HW1109/12_譚玥湄/CH07.03_Q23.md
+++ b/HW1109/12_譚玥湄/CH07.03_Q23.md
@@ -10,10 +10,10 @@ c. The average is less than 900.
 - Sample size(n) = 400  
 - standard deviation(s) = 80  
 
-**Step 1: Standard error of the mean**  
-The standard error of the mean (SEM) is calculated as:
-<li>    $$SEM= \frac{\sigma}{\sqrt{n}}$$   
-<li>    $$SEM= \frac{80}{\sqrt{400}} $$ = 4  
+* Step 1: Standard error of the mean  
+  The standard error of the mean (SEM) is calculated as:  
+  $$SEM= \frac{\sigma}{\sqrt{n}}$$    
+  $$SEM= \frac{80}{\sqrt{400}} $$ = 4  
 
 Step 2: Standardizing (Z-scores)
   For each probability, we calculate the Z-score using the formula:  
