--- a/HW1123/12_譚玥湄/CH09.02_Q23.md
+++ b/HW1123/12_譚玥湄/CH09.02_Q23.md
@@ -8,33 +8,37 @@ c. How would you, as the quality control manager, report the results of your stu
 
 a. Hypotheses  
 To test whether the average amount of ground beef in the small trays is 1 pound, we set up the following hypotheses:  
-•	Null hypothesis ($$H_0$$): The average weight is equal to 1 pound (μ=1).  
-•	Alternative hypothesis ($$H_a$$): The average weight is not equal to 1 pound (μ / 1).  
+•	Null hypothesis ($$H_0$$):  μ=1  
+  The average weight is equal to 1 pound .  
+  
+•	Alternative hypothesis ($$H_a$$):  μ <> 1  
+  The average weight is not equal to 1 pound. 
 This is a two-tailed test, as we are testing for deviation in either direction.  
 
 ---
 
 b. Find the p-value and perform the test  
 Step 1.	Calculate the test statistic:  
-The test statistic for a one-sample ttt-test is calculated using the formula:   
+The test statistic for a one-sample t-test is calculated using the formula:   
 ![image](https://github.com/user-attachments/assets/f43abf30-4eb8-4387-9b1e-e9176d4625ae)
 
 Where:  
-o	$$\overline{x}$$=1.01 (sample mean)  
+o	$\overline{x}$=1.01 (sample mean)  
 o	μ=1 (hypothesized mean)  
 o	s=0.18 (sample standard deviation)  
 o	n=35 (sample size)  
 
-Substituting the values:  t=35  s= 0.18 ,$$\overline{x} - μ = 0.03040.01≈0.33  
+Substituting the values:  t=35  s= 0.18 , $\overline{x}$ - μ = 0.03040.01≈0.33  
 t ≈ 0.33 
 
 Step 2.	Degrees of freedom: Degrees of freedom (df) = n−1 = 35−1 = 34.  
 
 Step 3.	Find the p-value:  
-Using a t-distribution table or statistical software, the two-tailed p-value for t=0.33 with df=34 is approximately:  p≈0.745  
+Using a t-distribution table or statistical software,  
+the two-tailed p-value for t=0.33 with df = 34 is approximately:  p ≈ 0.745  
 
 Step 4.	Perform the test:  
-Compare p-value to the significance level (α=0.05). Since 0.745>0.05, we fail to reject the null hypothesis.   
+Compare p-value to the significance level (α=0.05). Since 0.745 > 0.05, we fail to reject the null hypothesis.   
 There is no significant evidence to suggest the average weight is different from 1 pound.
 
 ---
