--- a/HW1123/12_譚玥湄/CH09.02_Q23.md
+++ b/HW1123/12_譚玥湄/CH09.02_Q23.md
@@ -8,10 +8,10 @@ c. How would you, as the quality control manager, report the results of your stu
 
 a. Hypotheses  
 To test whether the average amount of ground beef in the small trays is 1 pound, we set up the following hypotheses:  
-•	Null hypothesis ($$H_0$$):  μ=1  
+* Null hypothesis ($$H_0$$):  μ=1  
   The average weight is equal to 1 pound .  
   
-•	Alternative hypothesis ($$H_a$$):  μ <> 1  
+* Alternative hypothesis ($$H_a$$):  μ <> 1  
   The average weight is not equal to 1 pound. 
 This is a two-tailed test, as we are testing for deviation in either direction.  
 
