--- a/HW1207/12_譚玥湄/CH12.02_Q06.md
+++ b/HW1207/12_譚玥湄/CH12.02_Q06.md
@@ -1,1 +1,37 @@
+Method of Least Squares Use the data given in Exercises 6–7 (Exercises 17–18, Section 12.1). Construct the ANOVA table for a simple linear regression analysis, showing
+the sources, degrees of freedom, sums of squares, and mean squares.
+
+x −2 −1 0 1 2
+y 1 1 3 5 5
+
+---
+結果
+       Source  DF    SS         MS     F
+0  Regression   1  14.4  14.400000  27.0
+1    Residual   3   1.6   0.533333   NaN
+2       Total   4  16.0        NaN   NaN
+The ANOVA table for the given data points is:
+Source	DF	SS	MS	F
+Regression	1	14.4	14.4	27.0
+Residual	3	1.6	0.533333	
+Total	4	16.0		
+
+Key Components:  
+1.	Regression:  
+o	DFReg=1DF_{\text{Reg}} = 1DFReg=1  
+o	SSReg=14.4SS_{\text{Reg}} = 14.4SSReg=14.4  
+o	MSReg=14.4MS_{\text{Reg}} = 14.4MSReg=14.4  
+
+3.	Residual:  
+o	DFRes=3DF_{\text{Res}} = 3DFRes=3
+o	SSRes=1.6SS_{\text{Res}} = 1.6SSRes=1.6
+o	MSRes=0.533333MS_{\text{Res}} = 0.533333MSRes=0.533333  
+
+5.	Total:  
+o	DFTotal=4DF_{\text{Total}} = 4DFTotal=4
+o	SSTotal=16.0SS_{\text{Total}} = 16.0SSTotal=16.0  
+
+7.	F-statistic:
+o	F=MSRegMSRes=27.0F = \frac{MS_{\text{Reg}}}{MS_{\text{Res}}} = 27.0F=MSResMSReg=27.0
+This indicates that the regression model explains a significant proportion of the variation in yyy. 
 
