--- a/HW1123/12_譚玥湄/CH10.01_Q06-7.md
+++ b/HW1123/12_譚玥湄/CH10.01_Q06-7.md
@@ -18,16 +18,16 @@ Using the t Table II Find the tabled value of t(ta) corresponding to a left-tail
 Using the t-distribution table, we can find the critical values ($$alphat$$) corresponding to the given right-tail area ($$alphat$$) and degrees of freedom (df). Here are the values:
 ________________________________________
 2. $$\alpha$$ = .05, df = 20  
-•	From the t-table, the critical value is:  $t_0.05$=1.725
+•	From the t-table, the critical value is:  $t_{0.05}$=1.725
 ________________________________________
 3.  $$\alpha$$ = .01, df = 18   
-•	From the t-table, the critical value is:  $t_0.01$=2.552
+•	From the t-table, the critical value is:  $t_{0.01}$=2.552
 ________________________________________
 4. $$\alpha$$ = .025, df = 12  
-•	From the t-table, the critical value is:  $t_0.025$=2.179
+•	From the t-table, the critical value is:  $t_{0.025}$=2.179
 ________________________________________
 5. $$\alpha$$ = .005, df = 25  
-•	From the t-table, the critical value is:  $t_0.005$=2.787
+•	From the t-table, the critical value is:  $t_{0.005}$=2.787
 ________________________________________
 6. $$\alpha$$ = .10, df = 7
 •	From the t-table, the critical value is:  $t_0.10$=1.415
