--- a/HW1123/12_譚玥湄/CH09.02_Q23.md
+++ b/HW1123/12_譚玥湄/CH09.02_Q23.md
@@ -18,29 +18,28 @@ This is a two-tailed test, as we are testing for deviation in either direction.
 ---
 
 b. Find the p-value and perform the test  
-Step 1.	Calculate the test statistic:  
-The test statistic for a one-sample t-test is calculated using the formula:   
-![image](https://github.com/user-attachments/assets/f43abf30-4eb8-4387-9b1e-e9176d4625ae)
+* Step 1.	Calculate the test statistic:  
+  The test statistic for a one-sample t-test is calculated using the formula:   
+  ![image](https://github.com/user-attachments/assets/f43abf30-4eb8-4387-9b1e-e9176d4625ae)
 
-Where:  
-o	$\overline{x}$=1.01 (sample mean)  
-o	μ=1 (hypothesized mean)  
-o	s=0.18 (sample standard deviation)  
-o	n=35 (sample size)  
+  Where:  
+  - $\overline{x}$=1.01 (sample mean)  
+  - μ=1 (hypothesized mean)  
+  -	s=0.18 (sample standard deviation)  
+  -	n=35 (sample size) 
+  Substituting the values:  t=35  s= 0.18 , $\overline{x}$ - μ = 0.03040.01≈0.33  
+  t ≈ 0.33 
 
-Substituting the values:  t=35  s= 0.18 , $\overline{x}$ - μ = 0.03040.01≈0.33  
-t ≈ 0.33 
+* Step 2.	Degrees of freedom: Degrees of freedom (df) = n−1 = 35−1 = 34.  
 
-Step 2.	Degrees of freedom: Degrees of freedom (df) = n−1 = 35−1 = 34.  
-
-Step 3.	Find the p-value:  
+* Step 3.	Find the p-value:  
 Using a t-distribution table or statistical software,  
 the two-tailed p-value for t=0.33 with df = 34 is approximately:  p ≈ 0.745  
 
-Step 4.	Perform the test:  
+* Step 4.	Perform the test:  
 Compare p-value to the significance level (α=0.05). Since 0.745 > 0.05, we fail to reject the null hypothesis.   
 There is no significant evidence to suggest the average weight is different from 1 pound.
 
 ---
 c. Report the results to a consumer interest group  
-"As part of our quality control measures, we conducted a statistical analysis of the average weight of ground beef packaged in small trays, which are intended to hold 1 pound of meat. Based on a random sample of 35 packages, the average weight was 1.01 pounds with a standard deviation of 0.18 pounds. Statistical testing indicated no significant difference from the intended weight of 1 pound (t=0.33, p=0.745). This suggests that the packaging process is consistent with the stated weight. We will continue monitoring production to maintain this standard."
+* "As part of our quality control measures, we conducted a statistical analysis of the average weight of ground beef packaged in small trays, which are intended to hold 1 pound of meat. Based on a random sample of 35 packages, the average weight was 1.01 pounds with a standard deviation of 0.18 pounds. Statistical testing indicated no significant difference from the intended weight of 1 pound (t=0.33, p=0.745). This suggests that the packaging process is consistent with the stated weight. We will continue monitoring production to maintain this standard."
