--- a/HW1123/12_譚玥湄/CH10.01_Q06-7.md
+++ b/HW1123/12_譚玥湄/CH10.01_Q06-7.md
@@ -15,19 +15,39 @@ Using the t Table II Find the tabled value of t(ta) corresponding to a left-tail
 
 ---
 
-Using the t-distribution table, we can find the critical values ($$alphat$$) corresponding to the given right-tail area ($$alphat$$) and degrees of freedom (df). Here are the values:
-________________________________________
+Q6. Using the t-distribution table, we can find the critical values ($$alphat$$) corresponding to the given right-tail area ($$alphat$$) and degrees of freedom (df). Here are the values:  
+![image](https://github.com/user-attachments/assets/8fbdd9fc-8976-4167-9392-948b37e535f5)
+
+
 2. $$\alpha$$ = .05, df = 20  
-•	From the t-table, the critical value is:  $t_{0.05}$=1.725
-________________________________________
+   From the t-table, the critical value is:  $t_{0.05}$=1.725  
+   
 3.  $$\alpha$$ = .01, df = 18   
-•	From the t-table, the critical value is:  $t_{0.01}$=2.552
-________________________________________
-4. $$\alpha$$ = .025, df = 12  
-•	From the t-table, the critical value is:  $t_{0.025}$=2.179
-________________________________________
-5. $$\alpha$$ = .005, df = 25  
-•	From the t-table, the critical value is:  $t_{0.005}$=2.787
-________________________________________
-6. $$\alpha$$ = .10, df = 7
-•	From the t-table, the critical value is:  $t_0.10$=1.415
+  From the t-table, the critical value is:  $t_{0.01}$=2.552
+
+5. $$\alpha$$ = .025, df = 12  
+  From the t-table, the critical value is:  $t_{0.025}$=2.179
+
+7. $$\alpha$$ = .005, df = 25  
+  From the t-table, the critical value is:  $t_{0.005}$=2.787
+
+9. $$\alpha$$ = .10, df = 7  
+  From the t-table, the critical value is:  $t_{t_0.10$}=1.415  
+
+---
+Q7. Using the t-distribution table, we can find the critical values ($$alphat$$) corresponding to the given left-tail area ($$alphat$$) and degrees of freedom (df). Here are the values:  
+
+7. $$\alpha$$ = .01, df = 9  
+   From the t-table, the critical value is:  $t_{0.05}$=1.725  
+   
+8. $$\alpha$$ = .05, df = 8    
+  From the t-table, the critical value is:  $t_{0.01}$=2.552
+
+9. $$\alpha$$ = .025, df = 15    
+  From the t-table, the critical value is:  $t_{0.025}$=2.179
+
+10. $$\alpha$$ = .10, df = 35  
+  From the t-table, the critical value is:  $t_{0.005}$=2.787
+
+11. $$\alpha$$ = .005, df = 23  
+  From the t-table, the critical value is:  $t_{t_0.10$}=1.415  
