--- a/HW1207/HW1207Q11.md
+++ b/HW1207/HW1207Q11.md
@@ -1,1 +1,146 @@
+# **CH12.05_Q3.Q5** $\textcolor{orange}{黃家鈞}$
 
+![image](https://github.com/user-attachments/assets/e408d551-5732-41c3-a89b-d8ffa02ce67b)
+
+![image](https://github.com/user-attachments/assets/81c6a658-8d63-48f8-9731-9667fa6ff4ed)
+
+![image](https://github.com/user-attachments/assets/4f7d09c5-4843-4500-8e57-c08d8bce4bac)
+
+
+**（一）平均值反應的信賴區間 (Confidence Intervals for the Average Value of y)**  
+利用以下給定的資訊，在 $x = x_0$ 時，求出平均 $y$ 值的信賴區間。  
+
+3. 給定 $n = 10$ , $\text{SSE} = 24$ ,  $\sum{x_i} = 59$ , $\sum{x_i^2} = 397$ ，迴歸方程為 $\hat{y} = 0.074 + 0.46x$ , 欲在 $x_0 = 5$ 時求出 90% 的平均反應值信賴區間。
+
+Ans:
+
+信賴水準：90% , 1- $\alpha$ = 90% , $\alpha$ =  0.1，自由度 $df = n - 2 = 8$ , $t_{8,0.05} = 1.860$(查表得)
+
+**計算參數：**  
+
+1. $\bar{x} = \frac{\sum x_i}{n} = \frac{59}{10} = 5.9$
+
+2. $\sum (x_i - \bar{x})^2 = 397 - \frac{59^2}{10} = 397 - \frac{3481}{10} = 397 - 348.1 = 48.9$
+
+3. 殘差變異估計： $s^2 = \frac{24}{8} = 3 \implies s = \sqrt{3} \approx 1.732$
+
+4. 預測平均值： $\hat{y}_0 = \hat{y}(5) = 0.074 + 0.46 \times 5 = 2.374$
+
+5. 計算信賴區間的標準誤差項：
+
+$\sqrt{\frac{1}{n} + \frac{(x_0 - \bar{x})^2}{\sum (x_i - \bar{x})^2}}$
+   
+$= \sqrt{\frac{1}{10} + \frac{(5 - 5.9)^2}{48.9}}$
+
+$= \sqrt{0.1 + \frac{0.81}{48.9}} = \sqrt{0.1 + 0.01656} = \sqrt{0.11656}\approx 0.3414$
+   
+6. 信賴區間半徑 (誤差範圍)： $t \cdot s \cdot 0.3414 = 1.860 \times 1.732 \times 0.3414 \approx 1.0998$
+
+**信賴區間：** $2.374 \pm 1.0998 = [1.2742\, 3.4738]$
+
+
+**（二）預測區間 (Prediction Intervals for a Particular Value of y)**  
+利用上題 3–4 相同的資料，對於在 $x = x_0$ 下某新觀察值 $y$ 的可能範圍找出預測區間，並比較該預測區間與平均反應值的信賴區間之寬度。  
+
+5. 使用題 3 的資料，在 $x_0 = 5$ 時找出 90% 預測區間。  
+
+
+---
+
+## 題4：平均反應值的 99% 信賴區間
+
+**已知資料：**  
+- \( n = 6 \)  
+- \( s = 0.639 \)  
+- \(\sum x_i = 19, \sum x_i^2 = 71\)  
+- 迴歸式：\(\hat{y} = 3.58 + 0.82x\)  
+- \( x_0 = 2 \)  
+- 99% 信賴水準，\( df=4 \)，查表 \( t_{0.005,4} \approx 4.604 \)
+
+**計算參數：**  
+1. \(\bar{x} = \frac{19}{6} \approx 3.1667\)
+
+2. \(\sum (x_i - \bar{x})^2 = 71 - \frac{19^2}{6} = 71 - \frac{361}{6} = 71 - 60.1667 = 10.8333\)
+
+3. 預測平均值 \(\hat{y}_0 = \hat{y}(2) = 3.58 + 0.82 \times 2 = 3.58 + 1.64 = 5.22\)
+
+4. 標準誤差項：  
+   \[
+   \sqrt{\frac{1}{6} + \frac{(2 - 3.1667)^2}{10.8333}}
+   = \sqrt{0.1667 + \frac{1.3611}{10.8333}}
+   = \sqrt{0.1667 + 0.1255}
+   = \sqrt{0.2922} \approx 0.5405
+   \]
+
+5. 信賴區間半徑：  
+   \[
+   t \cdot s \cdot 0.5405 = 4.604 \times 0.639 \times 0.5405 \approx 1.59
+   \]
+
+**信賴區間：**  
+\[
+5.22 \pm 1.59 = [3.63,\, 6.81]
+\]
+
+---
+
+## 題5：新觀察值的 90% 預測區間 (使用題3資料)
+
+相同資料：\( n=10, s=1.732, t_{0.05,8}=1.860, \hat{y}_0=2.374 \) (同題3)
+
+預測區間的公式在標準誤差項內多了「+1」：  
+\[
+\sqrt{1 + \frac{1}{n} + \frac{(x_0-\bar{x})^2}{\sum (x_i-\bar{x})^2}}
+\]
+
+前題計算中 \(\frac{1}{n}+\frac{(x_0-\bar{x})^2}{\sum (x_i-\bar{x})^2}=0.11656\)  
+加入 1 後：  
+\[
+1+0.11656=1.11656 \implies \sqrt{1.11656}=1.0567
+\]
+
+預測區間半徑：  
+\[
+t \cdot s \cdot 1.0567 = 1.860 \times 1.732 \times 1.0567 \approx 3.40
+\]
+
+**預測區間：**  
+\[
+2.374 \pm 3.40 = [-1.026,\, 5.774]
+\]
+
+由此可見，預測區間明顯比平均反應值的信賴區間（[1.274, 3.474]）更寬。
+
+---
+
+## 題6：新觀察值的 99% 預測區間 (使用題4資料)
+
+相同資料：\( n=6, s=0.639, t_{0.005,4}=4.604, \hat{y}_0=5.22 \) (同題4)
+
+\[
+\frac{1}{n}+\frac{(x_0-\bar{x})^2}{\sum(x_i-\bar{x})^2}=0.2922
+\]
+
+加入1：  
+\[
+1+0.2922=1.2922 \implies \sqrt{1.2922}=1.1364
+\]
+
+預測區間半徑：  
+\[
+4.604 \times 0.639 \times 1.1364 \approx 3.35
+\]
+
+**預測區間：**  
+\[
+5.22 \pm 3.35 = [1.87,\,8.57]
+\]
+
+同樣地，預測區間明顯比平均反應值的信賴區間（[3.63, 6.81]）更寬。
+
+---
+
+# 結論
+
+比較同樣信賴水準與同樣 \( x_0 \) 時，新觀察值的預測區間 (Prediction Interval) 一定比平均反應值的信賴區間 (Confidence Interval for the Mean Response) 更寬。  
+這是因為預測區間除了考慮迴歸線估計的不確定性外，還包含單筆新觀察值本身的變異性。
